fixed one compilation error

--- a/manuscript/supplemental.tex
+++ b/manuscript/supplemental.tex
@@ -299,7 +299,7 @@ alyssa.cirtwill@gmail.com\\
           \end{figure}
 
 
-      For species with $n_{ij}>0$, the posterior distribution will depend on the values of $n_{ij}$ and $k_{ij}$. Here we are interested only in cases where $k_{ij}=0$. This gives $\alpha'$=$\alpha$ and $\beta'$=$\beta + n_{ij}$. For a pair of species which co-occurred at all 374 sites and was never observed to interact, the distribution for the \emph{Salix}-galler network would become $\bar\lambda_{ij}$=1.27 $\times$ 10$^{-2}$, var($\lambda_{ij}$)=1.82 $\times$ 10$^{-5}$. As $n_{ij}$ decreases, the distribution widens and moves away from the origin (Fig.~\ref{Salix_pdfs}). The 95\% credible interval for hypothetical \emph{Salix}-galler pairs widened from (0.006, 0.022) if the pair co-occurred at all sites to (0.013, 0.049) if they co-occurred at none (Table~\ref{credints}, \empH{Appendix S11}). 
+      For species with $n_{ij}>0$, the posterior distribution will depend on the values of $n_{ij}$ and $k_{ij}$. Here we are interested only in cases where $k_{ij}=0$. This gives $\alpha'$=$\alpha$ and $\beta'$=$\beta + n_{ij}$. For a pair of species which co-occurred at all 374 sites and was never observed to interact, the distribution for the \emph{Salix}-galler network would become $\bar\lambda_{ij}$=1.27 $\times$ 10$^{-2}$, var($\lambda_{ij}$)=1.82 $\times$ 10$^{-5}$. As $n_{ij}$ decreases, the distribution widens and moves away from the origin (Fig.~\ref{Salix_pdfs}). The 95\% credible interval for hypothetical \emph{Salix}-galler pairs widened from (0.006, 0.022) if the pair co-occurred at all sites to (0.013, 0.049) if they co-occurred at none (Table~\ref{credints}, \emph{Appendix S11}). 
 
       \begin{figure}[h!]
         \caption{Using prior distributions based on the \emph{Salix}-galler network sampled at a single site in~\citet{Kopelke2017}, we can calculate posterior distributions for the probability of interaction ($\lambda_{ij}$) between two species $i$ and $j$ that have not yet been observed interacting. Here we show posterior distributions for $\lambda_{ij}$ ranging from the prior distribution ($n_{ij}=0$ observed co-occurrence) to the distribution obtained when the pair of species has been observed co-occurring 100 times. The distribution narrows and approaches zero as the sample size increases. Likewise, the maximum likelihood estimator for the mean probability of interaction (diamonds at top) approaches zero and the 95\% credible interval (lines at top) narrows as sample size increases. Dashed lines indicate threshold probabilities of 0.1, 0.05, and 0.01.}
