bibliography checked and ready

--- a/manuscript/manual.bib
+++ b/manuscript/manual.bib
@@ -7,12 +7,12 @@ journal={Molecular Ecology},
 pages={},
 doi={https://doi.org/10.1111/1755-0998.12960}}
 @article{Gravel2018,
-author={Gravel, Dom and Baiser, Ben and Dunne, Jennifer A and Kopelke, Jens-Peter and Martinez, Neo D and Nyman, Tommi and Poisot, Tim and Stouffer, Daniel B and Tylianakis, Jason and Wood, Spencer A and Roslin, Tomas},
-title={Bringing Elton and Grinell together: a quantitative framework to represent the biogeography of ecological interactions},
+author={Gravel, Dom and Baiser, Ben and Dunne, Jennifer A and Kopelke, Jens-Peter and Martinez, Neo D and Nyman, Tommi and Poisot, Tim and Stouffer, Daniel B and Tylianakis, Jason M and Wood, Spencer A and Roslin, Tomas},
+title={{Bringing Elton and Grinnell together: a quantitative framework to represent the biogeography of ecological interactions}},
 journal={Ecography},
 year={2018},
-volume={41},
-pages={1--15},
+volume={Online Early View},
+pages={},
 doi={10.111/ecog.04006}}
 @article{DesjardinsProulx2017,
 author={Desjardins-Proulx, Philippe and Laigle, Idaline and Poisot, Tim and Gravel, Dominique},
@@ -32,7 +32,7 @@ year={1906},
 title={Sur les fonctions convexes et les in{\'{e}}galit{\'{e}}s entre les valeurs moyennes},
 }
 @article{Giron2018,
-author={Giron, D and Dubreuil, G and Bennett, A and Dedeine, F and Dicke, M and Dyer, L and Erb, M and Harris, M and Huguet, E and Kaloshian, I and Kawakita, A and Lopez-Vaamonde, C and Palmer, T and Petanidou, T and Poulsen, M and Sall\'{e}, A and Simon, J and Terblanche, J and Thi\'{e}ry, D and Whiteman, N and Woods, H and Pincebourde, S},
+author={Giron, D and Dubreuil, G and Bennett, A and Dedeine, F and Dicke, M and Dyer, Lynna A and Erb, M and Harris, Marion O. and Huguet, E and Kaloshian, I and Kawakita, A and Lopez-Vaamonde, C and Palmer, Todd M and Petanidou, T and Poulsen, M and Sall\'{e}, A and Simon, J and Terblanche, John S and Thi\'{e}ry, D and Whiteman, Noah K and Woods, H Arthur and Pincebourde, S},
 journal={Entomologia Experimentalis et Applicata},
 year={2018},
 volume={166},
@@ -3757,9 +3757,9 @@ file = {:Users/alyci52/Library/Application Support/Mendeley Desktop/Downloaded/C
 journal = {Parasitology},
 keywords = {fi sh diet,helminth parasites,individual host,infection levels,transmission mode},
 number = {5},
-pages = {785--795},
+pages = {75--86},
 title = {{Are parasite richness and abundance linked to prey species richness and individual feeding preferences in fish hosts?}},
-volume = {85},
+volume = {143},
 year = {2016}
 }
 @book{energy,
@@ -5345,8 +5345,8 @@ journal={Diversity and Distributions}
 }
 @article{Lopez2017,
 year={2017},
-author={Lopez, D and Camus, P and Valdivia, N and Estay, S},
-title={High temporal variability in the occurrence of consumer–resource interactions in ecological networks},
+author={Lopez, Daniela N and Camus, Patricio A and Valdivia, N and Estay, Sergio A},
+title={{High temporal variability in the occurrence of consumer--resource interactions in ecological networks}},
 journal={Oikos},
 volume={126},
 pages={1699--1707},
@@ -5363,7 +5363,7 @@ doi={10.1007/s00442-013-2806-5},
 }
 @article{Clegg2018,
 year={2018},
-author={Clegg, T and Ali, M and Beckerman, A},
+author={Clegg, T and Ali, M and Beckerman, Andrew P.},
 title={The impact of intraspecific variation on food web structure},
 journal={Ecology},
 volume={99},
@@ -5376,12 +5376,12 @@ author={Bartomeus, I},
 title={Understanding linkage rules in plant-pollinator networks by using hierarchical models that incorporate pollinator detectability and plant traits},
 journal={PLoS ONE},
 volume={8},
-pages={1-8},
+pages={e69200},
 doi={10.1371/journal.pone.0069200},
 }
 @article{Weinstein2017a,
 year={2017},
-author={Weinstein, B and Graham, Catherine},
+author={Weinstein, B G and Graham, Catherine H},
 title={Persistent bill and corolla matching despite shifting temporal resources in tropical hummingbird-plant interactions},
 journal={Ecology Letters},
 volume={20},
@@ -5408,7 +5408,7 @@ doi={10.3310/hta4380},
 @article{Leyland2005,
 year={2005},
 author={Leyland, Alistair H and Davies, Carolyn A},
-title={Empirical Bayes methods for disease mapping},
+title={{Empirical Bayes methods for disease mapping}},
 journal={Statistical Methods in Medical Research},
 volume={14},
 pages={17--34},
@@ -6149,7 +6149,7 @@ year = {1985}
 }
 @incollection{Kitching1967,
 address = {London},
-author = {Kitching, J. a. and Ebling, F. J.},
+author = {Kitching, J. A. and Ebling, F. J.},
 booktitle = {Advances in Ecological Research},
 doi = {10.1016/S0065-2504(08)60322-0},
 editor = {Cragg, J. B.},
@@ -6529,7 +6529,7 @@ volume = {38},
 year = {2009}
 }
 @article{Kitching1987,
-author = {Kitching, R L and Kitching, R L},
+author = {Kitching, R L},
 file = {:Users/alyci52/Library/Application Support/Mendeley Desktop/Downloaded/Kitching, Kitching - 1987 - Spatial and temporal variation in food webs in water-filled treeholes.pdf:pdf},
 journal = {Oikos},
 number = {3},
@@ -10296,7 +10296,7 @@ year = {1990}
 }
 @article{Wells2013,
 abstract = {Patterns of host-parasite association are poorly understood in tropical forests. While we typically observe only snapshots of the diverse assemblages and interactions under variable conditions, there is a desire to make inferences about prevalence and host-specificity patterns. We studied the interaction of ticks with non-volant small mammals in forests of Borneo. We inferred the probability of species interactions from individual-level data in a multi-level Bayesian model that incorporated environmental covariates and advanced estimates for rarely observed species through model averaging. We estimated the likelihood of observing particular interaction frequencies under field conditions and a scenario of exhaustive sampling and examined the consequences for inferring host specificity. We recorded a total of 13 different tick species belonging to the five genera Amblyomma, Dermacentor, Haemaphysalis, Ixodes, and Rhipicephalus from a total of 37 different host species (Rodentia, Scandentia, Carnivora, Soricidae) on 237 out of 1,444 host individuals. Infestation probabilities revealed most variation across host species but less variation across tick species with three common rat and two tree shrew species being most heavily infested. Host species identity explained ca. 75 {\%} of the variation in infestation probability and another 8-10 {\%} was explained by local host abundance. Host traits and site-specific attributes had little explanatory power. Host specificity was estimated to be similarly low for all tick species, which were all likely to infest 34-37 host species if exhaustively sampled. By taking into consideration the hierarchical organization of individual interactions that may take place under variable conditions and that shape host-parasite networks, we can discern uncertainty and sampling bias from true interaction frequencies, whereas network attributes derived from observed values may lead to highly misleading results. Multi-level approaches may help to move this field towards inferential approaches for understanding mechanisms that shape the strength and dynamics in ecological networks.},
-author = {Wells, Konstans and O'Hara, Robert B. and Pfeiffer, Martin and Lakim, Maklarin B. and Petney, Trevor N. and Durden, Lance a.},
+author = {Wells, Konstans and O'Hara, Robert B. and Pfeiffer, Martin and Lakim, Maklarin B. and Petney, Trevor N. and Durden, Lance A.},
 doi = {10.1007/s00442-012-2511-9},
 file = {:Users/alyci52/Library/Application Support/Mendeley Desktop/Downloaded/Wells et al. - 2013 - Inferring host specificity and network formation through agent-based models Tick-mammal interactions in Borneo.pdf:pdf},
 journal = {Oecologia},
@@ -10305,7 +10305,7 @@ month = {jun},
 number = {2},
 pages = {307--316},
 pmid = {23108423},
-title = {{Inferring host specificity and network formation through agent-based models: Tick-mammal interactions in Borneo}},
+title = {{Inferring host specificity and network formation through agent-based models: tick-mammal interactions in Borneo}},
 volume = {172},
 year = {2013}
 }
